Turtleizer axes corrected, frame size adapted, help simplified